--- a/xml-conduit-generic.cabal
+++ b/xml-conduit-generic.cabal
@@ -22,18 +22,7 @@ library
 
     ghc-options:   -Wall -O2
 
---    extensions: TemplateHaskell
---                QuasiQuotes
---                OverloadedStrings
---                NoImplicitPrelude
---                CPP
---                MultiParamTypeClasses
---                TypeFamilies
---                GADTs
---                GeneralizedNewtypeDeriving
---                FlexibleContexts
---                EmptyDataDecls
---                NoMonomorphismRestriction
+    extensions: OverloadedStrings, FlexibleInstances
 
     build-depends: base         >= 4        && < 5
                 , conduit       >= 1.0      && < 1.1
@@ -58,16 +47,3 @@ library
 -- 
 --     ghc-options:       -O2
 
--- test-suite test
---     type:              exitcode-stdio-1.0
---     main-is:           main.hs
---     hs-source-dirs:    tests
---     ghc-options:       -Wall
--- 
---     build-depends: base
---                  , hsspd
---                  , yesod-test >= 0.3 && < 0.4
---                  , yesod-default
---                  , yesod-core
---                  , persistent
---                  , persistent-postgresql
