--- a/xml-conduit-generic.cabal
+++ b/xml-conduit-generic.cabal
@@ -33,6 +33,7 @@ library
                         , text          >= 0.11
                         , data-default  >= 0.5      && < 0.6
                         , transformers  >= 0.3      && < 0.4
+                        , containers    >= 0.5      && < 0.6
 
 executable         testXml
     if flag(with-test)
