--- a/xml-conduit-generic.cabal
+++ b/xml-conduit-generic.cabal
@@ -34,6 +34,8 @@ library
                         , data-default  >= 0.5      && < 0.6
                         , transformers  >= 0.3      && < 0.4
                         , containers    >= 0.5      && < 0.6
+                        , old-locale    >= 1.0      && < 1.1
+                        , time          >= 1.4      && < 1.5
 
 executable         testXml
     if flag(with-test)
