--- a/xml-conduit-generic.cabal
+++ b/xml-conduit-generic.cabal
@@ -25,17 +25,29 @@ library
     extensions: OverloadedStrings, FlexibleInstances
 
     build-depends:      base         >= 4        && < 5
-                        , conduit       >= 1.0      && < 1.1
-                        , xml-conduit   >= 1.1      && < 1.2
-                        , safe          >= 0.3      && < 0.4
+                        , conduit       >= 1.0      
+                        -- && < 1.1
+                        , xml-conduit   >= 1.1      
+                        -- && < 1.2
+                        , safe          >= 0.3      
+                        -- && < 0.4
                         , ghc-prim
-                        , xml-types     >= 0.3      && < 0.4
+                        , xml-types     >= 0.3      
+                        -- && < 0.4
                         , text          >= 0.11
-                        , data-default  >= 0.5      && < 0.6
-                        , transformers  >= 0.3      && < 0.4
-                        , containers    >= 0.5      && < 0.6
-                        , old-locale    >= 1.0      && < 1.1
-                        , time          >= 1.4      && < 1.5
+                        , data-default  >= 0.5      
+                        -- && < 0.6
+                        , transformers  >= 0.3      
+                        -- && < 0.4
+                        , containers    >= 0.5      
+                        -- && < 0.6
+                        , old-locale    >= 1.0      
+                        -- && < 1.1
+                        , time          >= 1.4      
+                        -- && < 1.5
+                        , exceptions
+                        , transformers-base
+                        , primitive
 
 executable         testXml
     if flag(with-test)
@@ -47,8 +59,10 @@ executable         testXml
     hs-source-dirs:     test
     build-depends:      base
                         , xml-conduit-generic
-                        , data-default  >= 0.5      && < 0.6
-                        , xml-conduit   >= 1.1      && < 1.2
+                        , data-default  >= 0.5      
+                        -- && < 0.6
+                        , xml-conduit   >= 1.1      
+                        -- && < 1.2
                         , text          >= 0.11
                         , conduit       >= 1.0.9
 
